--- a/css/extra.css
+++ b/css/extra.css
@@ -14,7 +14,8 @@ body {
   padding: 30px;
   text-align: center;
   font-size: 35px;
-  padding-top:20px;
+  padding-top:30px;
+  padding-bottom: 10px;
   min-height:70px;
 }
 /* Topnav**/
@@ -89,6 +90,7 @@ body {
 /* Styling the left column */
 .left {
   grid-area: left;
+  margin-left: 30px;
 }
 
 /* Styling the middle column */
@@ -99,13 +101,15 @@ body {
 /* Styling the right column */
 .right {
   grid-area: right;
+  margin-right: 30px;
 }
 
 /* Styling the footer */
 .footer {
   grid-area: footer;
-  background-color: #f1f1f1;
+  background-color: #e0c09f;;
   padding: 10px;
+  margin: 10px 30px 10px 30px;
   text-align: center;
 }
 
@@ -119,4 +123,10 @@ body {
       'right right right right right right' 
       'footer footer footer footer footer footer';
   }
+}
+/* Responsive video layout **/
+video {
+  align-content: center;
+  width: 100%    !important;
+  height: auto   !important;
 }
